recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
    return(Nil);
           ^Nth:7: error: type mismatch;
 found   : List[Int]
 required: Int
      return(l.tail);
               ^