recursion.cons.nth.Nth.scala.code
def nth(l:List[Int], n:Int): Int = {
  if (l==Nil){
    return(Nil);
  }else{
    if (n==1){
      return(l.tail);
    }else{
      return(nth(l.tail,n-1));
    }
  }
}